...
  <string name="menu_assistant">Assistant</string>
  <string name="menu_more_tools">More tools</string>
  <string name="menu_share">Export&#8230;</string>
  <string name="menu_share_linearized">Export linearized copy&#8230;</string>
  <string name="menu_share_encrypted">Export encrypted copy&#8230;</string>
  <string name="menu_share_flattened">Export flattened PDF&#8230;</string>
  <string name="menu_save_linearized">Save linearized copy&#8230;</string>
  <string name="menu_save_encrypted">Save encrypted copy&#8230;</string>
  <string name="menu_import_annotations">Import annotations&#8230;</string>
  <string name="menu_export_annotations">Export annotations&#8230;</string>
  <string name="menu_strikeout">Strikeout</string>
  <string name="menu_delete_text">Delete (proof)</string>
  <string name="menu_replace">Replace (proof)</string>
  <string name="menu_underline">Underline</string>
...
